; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_get_fsmonitor.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_get_fsmonitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"core.fsmonitor\00", align 1
@core_fsmonitor = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"GIT_TEST_FSMONITOR\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_get_fsmonitor() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @git_config_get_pathname(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32** @core_fsmonitor)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32* @getenv(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  store i32* %5, i32** @core_fsmonitor, align 8
  br label %6

6:                                                ; preds = %4, %0
  %7 = load i32*, i32** @core_fsmonitor, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = load i32*, i32** @core_fsmonitor, align 8
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i32* null, i32** @core_fsmonitor, align 8
  br label %14

14:                                               ; preds = %13, %9, %6
  %15 = load i32*, i32** @core_fsmonitor, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 1, i32* %1, align 4
  br label %19

18:                                               ; preds = %14
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i64 @git_config_get_pathname(i8*, i32**) #1

declare dso_local i32* @getenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
